# CppParserCombinator

./: .gitmodules  .replit  CMakeLists.txt  README.md  replit.nix
include/cpp_parser_combinator/: cpp_parser_combinator.hpp
src/: number_parser.cpp  parser_state.cpp  run.cpp  sequence_of.cpp  string_parser.cpp
test/: number_parser_test.cpp  sequence_of_test.cpp  string_parser_test.cpp
